# ts_CBP

./: .gitignore  .pre-commit-config.yaml  .ts_pre_commit_config.yaml  Jenkinsfile  Jenkinsfile.conda  pyproject.toml  setup.cfg  setup.py  towncrier.toml
conda/: meta.yaml
doc/: conf.py  version-history.rst  version_history.rst
doc/developer-guide/: developer-guide.rst
doc/news/: DM-42249.feature.rst  DM-44417.bugfix.1.rst  DM-44417.bugfix.rst  DM-47349.bugfix.rst  DM-47555.bugfix.1.rst  DM-47555.bugfix.2.rst  DM-47555.bugfix.rst  DM-47555.feature.1.rst  DM-47555.feature.rst  DM-47638.bugfix.rst  DM-49830.bugfix.rst  DM-50648.perf.rst  DM-50650.misc.rst  DM-50650.perf.rst  DM-50981.bugfix.rst  DM-51039.misc.rst  OSW-799.perf.rst  README.rst
doc/user-guide/: user-guide.rst
python/lsst/ts/cbp/: __init__.py  cli.py  component.py  config_schema.py  csc.py  enums.py  mock_server.py  wizardry.py
tests/: test_csc.py
