[aliases]
test=pytest

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E203, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503
exclude = __init__.py, doc/*.py, tests/.tests version.py

[tool:pytest]
addopts = --flake8 --black
flake8-ignore = E133 E203 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503
log_level = DEBUG

[metadata]
name= ts-cbp
description = CBP is a Commandable SAL Component for the `Vera C. Rubin Observatory <https://lsst.org>`_.
long_description= file: README.rst
version = attr: setuptools_scm.get_version
license=GPL
project_urls=
    Bug Tracker=https://jira.lsstcorp.org/secure/Dashboard.jspa
    Source Code=https://github.com/lsst-ts/ts_CBP

[options]
package_dir=
    =python
packages=find_namespace:
[options.entry_points]
console_scripts = 
    run_cbp = lsst.ts.cbp.cli:execute_csc


[options.package_data]
* = *.rst, *.yaml

[options.packages.find]
where=python

[options.extras_require]
dev = 
    pytest
    pytest-flake8
    pytest-coverage
    asynctest
    black
    pytest-black
    documenteer[pipelines]
